tests/parsing/smtlib/v2.7/errors/015_sorted_var_unclosed_1.smt2
(set-logic ALL)
(assert (forall ((x int _)) x))
